This will hopefully fix the overscroll on IOS (#114)

--- a/ui/src/app/modules/teams/components/header/header.component.scss
+++ b/ui/src/app/modules/teams/components/header/header.component.scss
@@ -31,7 +31,7 @@
     left: 0;
     padding-bottom: 0;
     padding-top: 6px;
-    position: fixed;
+    position: absolute;
     right: 0;
     top: 0;
   }
